Deprecate session mail and rcpts and use envelope instead